<resources>
    <string name="app_name">Keats</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="get_otp">Get OTP</string>
    <string name="keats_logo">Keats Logo</string>
    <string name="login_page_keats_svg">Login Page Keats SVG</string>
    <string name="welcome_to_keats">Welcome to Keats!</string>
    <string name="enter_phone_message">Enter your phone number to get started</string>
    <string name="please_enter_your_otp_to_login">Please enter your OTP to login</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="default_svg_when_no_clubs">Default SVG when no clubs</string>
    <string name="create_a_club">Create a Club</string>
    <string name="join_a_club">Join a Club</string>
    <string name="clubs">Clubs</string>
    <string name="create_or_join_club">Create or Join Club</string>
    <string name="join_your_first_book_club">Join your first book club!</string>
    <string name="club_url">club photo</string>
    <string name="club_type_private">Private</string>
    <string name="club_type_public">Public</string>
    <string name="user_profile_photo">User Profile Photo</string>
    <string name="error_text">Oops! An error occurred</string>
    <string name="profile_svg">Profile SVG</string>
    <string name="bio_svg">Bio Svg</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="logout_button">Logout Button</string>
    <string name="logout">Logout</string>
    <string name="edit_user_details">Edit User Details</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_bio">Enter your bio</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="user_profile_icon">User profile icon</string>
    <string name="user_bio_icon">User bio icon</string>
    <string name="user_email_icon">User email icon</string>
    <string name="user_phone_icon">User phone icon</string>
    <string name="save_edited_user_details">Save edited user details</string>
    <string name="enter_club_id">Enter Club ID</string>
    <string name="scan_qr_code_button_image">scan qr code button image</string>
    <string name="join">Join</string>
    <string name="public_clubs">Public Clubs</string>
    <string name="create_club">Create Club</string>
    <string name="join_club">Join Club</string>
    <string name="nothing_to_see_here">Nothing to see here!</string>
    <string name="qr_code_picker_from_gallery">QR Code picker from gallery</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="upload_epub">Upload EPUB</string>
    <string name="club_qr_code">Club QR Code</string>
    <string name="your_qr_code">Your QR Code</string>
    <string name="qr_code_of_the_club">QR Code of the Club</string>
    <string name="show_qr_code">Show QR Code</string>
    <string name="share_qr_code">Share QR Code</string>
    <string name="back_button">Back Button</string>
    <string name="cancel_editing">Cancel Editing</string>
    <string name="club_details_photo">Club Details Photo</string>
    <string name="host_club_display"><u>Host: %1$s</u></string>
    <string name="no_of_members_club_details">%1$s member%2$s</string>
    <string name="members_club_details_text">Members</string>
    <string name="club_text">Club</string>
    <string name="member_profile_photo">Member Profile Photo</string>
    <string name="remove_member_string">Remove</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="create_new_club">Create New Club</string>
    <string name="private_club_type">Private</string>
    <string name="club_image">Club Image</string>
    <string name="enter_club_name">Enter Club Name</string>
    <string name="upload_book_button_text">Upload Book</string>
    <string name="continue_text">Continue</string>
    <string name="upload_club_image_button">Upload Club Image Button</string>
    <string name="leave_club">Leave Club</string>
    <string name="confirm_to_leave_text">Confirm to leave text</string>
    <string name="confirm_lower">Confirm</string>
    <string name="enter_confirm_to_leave_the_club">Please type KEATS to confirm</string>
    <string name="leave_lower">Leave</string>
    <string name="are_you_absolutely_sure">Are you absolutely sure?</string>
    <string name="edit_club_button">Edit Club Button</string>
    <string name="change_book">Change Book</string>
    <string name="edit_club_details">Edit Club Details</string>
</resources>