<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_one">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_one"
        tools:context=".ui.clubs.CreateClubFragment">

        <TextView
            android:id="@+id/create_club_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/circular_std_bold"
            android:text="@string/create_new_club"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/private_club_type"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/private_toggle"
            app:layout_constraintEnd_toStartOf="@+id/private_toggle"
            app:layout_constraintTop_toTopOf="@+id/private_toggle" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/private_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_club_text" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/club_image_card"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_margin="35dp"
            app:cardBackgroundColor="@color/box_stroke"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/private_toggle">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:contentDescription="@string/club_image"
                android:src="@drawable/ic_girlreading" />
        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/upload_club_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginTop="132dp"
            android:contentDescription="@string/upload_club_image_button"
            android:elevation="10dp"
            android:src="@drawable/ic_upload"
            app:layout_constraintStart_toStartOf="@+id/club_image_card"
            app:layout_constraintTop_toTopOf="@+id/club_image_card" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/club_name_edit_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/edit_text_box_bg"
            android:hint="@string/enter_club_name"
            android:inputType="textNoSuggestions"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_transparent_70"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/club_image_card"
            app:layout_constraintStart_toStartOf="@+id/club_image_card"
            app:layout_constraintTop_toBottomOf="@+id/club_image_card" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_book_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:drawableEnd="@drawable/ic_upload_alt"
            android:letterSpacing="0.01"
            android:text="@string/upload_book_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/club_name_edit_text"
            app:layout_constraintStart_toStartOf="@+id/club_name_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/club_name_edit_text"
            app:strokeColor="@color/purple_500"
            app:strokeWidth="3dp" />

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonStyle"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:drawableEnd="@drawable/ic_continue"
            android:letterSpacing="0.01"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/select_book_button"
            app:layout_constraintStart_toStartOf="@+id/select_book_button"
            app:layout_constraintTop_toBottomOf="@+id/select_book_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
